--- a/Recomenda_Ai_Udemy!!.ipynb
+++ b/Recomenda_Ai_Udemy!!.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Recomenda Ai Udemy!!",
       "provenance": [],
-      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,20 +49,53 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "!pip install emoji"
+      ],
+      "metadata": {
+        "id": "tnjXOX81WoMf",
+        "outputId": "32017b1f-31d8-4500-a4b6-09d038f5b7df",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Collecting emoji\n",
+            "  Downloading emoji-2.2.0.tar.gz (240 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m240.9/240.9 KB\u001b[0m \u001b[31m4.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Building wheels for collected packages: emoji\n",
+            "  Building wheel for emoji (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for emoji: filename=emoji-2.2.0-py3-none-any.whl size=234926 sha256=eab1ca52ae000da48f7913cfe3fcfeb12f946342dca513dc85b6fcc81b7a2c62\n",
+            "  Stored in directory: /root/.cache/pip/wheels/9a/b8/0f/f580817231cbf59f6ade9fd132ff60ada1de9f7dc85521f857\n",
+            "Successfully built emoji\n",
+            "Installing collected packages: emoji\n",
+            "Successfully installed emoji-2.2.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "rnw023P2ODIJ",
-        "outputId": "b4f9412f-a6e9-48a6-e3a1-57bcf45148a7"
+        "outputId": "169d4a2c-e95b-4261-e434-a9aa6d224d70"
       },
       "source": [
-        "!pip install emoji\n",
         "import emoji\n",
         " \n",
-        "print(emoji.emojize(\"Seja Bem-vindo(a) :smile:\", use_aliases=True))\n",
+        "print(emoji.emojize(\"Seja Bem-vindo(a) :grinning_face:\", language='alias'))\n",
         "nome = input(\"Digite como gosta de ser chamado(a): \")\n",
-        "print(emoji.emojize(f\"Blz {nome}, estou aqui para te auxiliar nas melhores indicações de nossos cursos. :clapping_hands:\", use_aliases= True))\n",
+        "print(emoji.emojize(f\"Blz {nome}, estou aqui para te auxiliar nas melhores indicações de nossos cursos. :clapping_hands:\"))\n",
         " \n",
         "print(f\"************** Assuntos mais pesquisados na Udemy: *************\")\n",
         "assuntos_preferidos = [\"Criação de conteúdo\",\n",
@@ -97,19 +128,15 @@
         " \n",
         "#Recebe dois tipos de dados, dependendo da sua resposta"
       ],
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Collecting emoji\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/24/fa/b3368f41b95a286f8d300e323449ab4e86b85334c2e0b477e94422b8ed0f/emoji-1.2.0-py3-none-any.whl (131kB)\n",
-            "\r\u001b[K     |██▌                             | 10kB 12.4MB/s eta 0:00:01\r\u001b[K     |█████                           | 20kB 17.6MB/s eta 0:00:01\r\u001b[K     |███████▌                        | 30kB 11.6MB/s eta 0:00:01\r\u001b[K     |██████████                      | 40kB 9.0MB/s eta 0:00:01\r\u001b[K     |████████████▌                   | 51kB 4.5MB/s eta 0:00:01\r\u001b[K     |███████████████                 | 61kB 5.0MB/s eta 0:00:01\r\u001b[K     |█████████████████▌              | 71kB 5.0MB/s eta 0:00:01\r\u001b[K     |████████████████████            | 81kB 5.4MB/s eta 0:00:01\r\u001b[K     |██████████████████████▌         | 92kB 5.6MB/s eta 0:00:01\r\u001b[K     |█████████████████████████       | 102kB 5.9MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▌    | 112kB 5.9MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████  | 122kB 5.9MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 133kB 5.9MB/s \n",
-            "\u001b[?25hInstalling collected packages: emoji\n",
-            "Successfully installed emoji-1.2.0\n",
-            "Seja Bem-vindo(a) 😄\n",
-            "Digite como gosta de ser chamado(a): Gaby\n",
-            "Blz Gaby, estou aqui para te auxiliar nas melhores indicações de nossos cursos. 👏\n",
+            "Seja Bem-vindo(a) 😀\n",
+            "Digite como gosta de ser chamado(a): Gabriela\n",
+            "Blz Gabriela, estou aqui para te auxiliar nas melhores indicações de nossos cursos. 👏\n",
             "************** Assuntos mais pesquisados na Udemy: *************\n",
             "0. Criação de conteúdo\n",
             "1. Capacitação Profissional\n",
@@ -122,12 +149,11 @@
             "8. Banco de Dados\n",
             "9. YouTube\n",
             "10. Design\n",
-            "Agora {nome}, preciso que digite os números dos seus assuntos preferidos (utilize vírgulas. EX: 1,2,3): 1,2,6\n",
-            "Muito bem Gaby, preciso que me informe o tempo disponivel para se dedicar aos estudos (minutos):  \n",
-            "25\n",
-            "Gaby gostaria de investir quanto?  R$ 30\n"
-          ],
-          "name": "stdout"
+            "Agora {nome}, preciso que digite os números dos seus assuntos preferidos (utilize vírgulas. EX: 1,2,3): 4,6,7\n",
+            "Muito bem Gabriela, preciso que me informe o tempo disponivel para se dedicar aos estudos (minutos):  \n",
+            "200\n",
+            "Gabriela gostaria de investir quanto?  R$ 0\n"
+          ]
         }
       ]
     },
@@ -147,7 +173,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4VfxdktuQ7bU",
-        "outputId": "b423019d-ae4d-4ea7-bad8-aa8af4590c2c"
+        "outputId": "bf2f3d0f-6789-4590-f307-099f97ad0884"
       },
       "source": [
         "print(type(nome))\n",
@@ -171,22 +197,22 @@
         " \n",
         "print(nassuntos)"
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "<class 'str'>\n",
             "<class 'str'>\n",
             "<class 'float'>\n",
             "<class 'float'>\n",
-            "Nome: Gaby\n",
-            "ID Assuntos preferidos: 1,2,6\n",
-            "Tempo de estudos: 25.0 minutos\n",
-            "Mostrar os cursos pagos ou gratuitos: 30.0\n",
-            "[1, 2, 6]\n"
-          ],
-          "name": "stdout"
+            "Nome: Gabriela\n",
+            "ID Assuntos preferidos: 4,6,7\n",
+            "Tempo de estudos: 200.0 minutos\n",
+            "Mostrar os cursos pagos ou gratuitos: 0.0\n",
+            "[4, 6, 7]\n"
+          ]
         }
       ]
     },
@@ -264,7 +290,7 @@
         "            39.90,\n",
         "            ]"
       ],
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -274,7 +300,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mck03ELxJUtw",
-        "outputId": "b7c3952e-118a-4d18-95c8-95a58ba76fcd"
+        "outputId": "e4bc5ac8-8fe7-4cdf-b4f3-2ffc4405b7aa"
       },
       "source": [
         "assuntos_selecionados = []\n",
@@ -283,14 +309,14 @@
         " \n",
         "print(assuntos_selecionados)"
       ],
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "['CAPACITAÇÃO PROFISSIONAL', 'VENDAS', 'MARKETING DIGITAL']\n"
-          ],
-          "name": "stdout"
+            "['ANALISE DE DADOS', 'MARKETING DIGITAL', 'PROGRAMAÇÃO']\n"
+          ]
         }
       ]
     },
@@ -301,7 +327,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wTkjB4TeOFhX",
-        "outputId": "281d265e-ac0e-4924-efcc-3f715ad58999"
+        "outputId": "885195f2-940d-4f13-9ca8-e97303f41a60"
       },
       "source": [
         "print(f\"{nome}, após analisar o seu perfil selecionamos os seguintes cursos: \")\n",
@@ -319,22 +345,26 @@
         " \n",
         "print(f\"Vou ficando por aqui, foi um prazer te ajudar {nome}. Até uma próxima vez!\", \"\\N{winking face}\")"
       ],
-      "execution_count": 5,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Gaby, após analisar o seu perfil selecionamos os seguintes cursos: \n",
-            "CAPACITAÇÃO PROFISSIONAL:\n",
-            "VENDAS:\n",
+            "Gabriela, após analisar o seu perfil selecionamos os seguintes cursos: \n",
+            "ANALISE DE DADOS:\n",
+            "-Data Science: visualização de dados com python (63 min) (R$0.0)\n",
             "MARKETING DIGITAL:\n",
+            "PROGRAMAÇÃO:\n",
+            "-Como fazer um ChatBot em 1 dia (79 min) (R$0.0)\n",
+            "-Como fazer um APP em dia! (com Ionic e Firebase) (75 min) (R$0.0)\n",
+            "-Data Science: visualização de dados com python (63 min) (R$0.0)\n",
             "-----------------------------------------------------------------------------------------------------------------\n",
-            "Bom, espero que tenha se indentificado com a escolha que fizemos Gaby. \n",
+            "Bom, espero que tenha se indentificado com a escolha que fizemos Gabriela. \n",
             "Lembrando que caso, você não ache os cursos selecionados interessantes,\n",
             "poderá refazer a seleção novamente.\n",
-            "Vou ficando por aqui, foi um prazer te ajudar Gaby. Até uma próxima vez! 😉\n"
-          ],
-          "name": "stdout"
+            "Vou ficando por aqui, foi um prazer te ajudar Gabriela. Até uma próxima vez! 😉\n"
+          ]
         }
       ]
     }
